--- a/index.html
+++ b/index.html
@@ -123,12 +123,12 @@
             <div class="section-subtitle">
                 <h2>
                     <p>💻</p>
-                    <p><span>Desenvolvedor</span> Web Front-End</p>
+                    <p><span>Desenvolvedor</span></p>
                 </h2>
             </div>
 
             <h3>
-                Sou um Desenvolvedor Web Front-End com expêriencias em
+                Sou um Desenvolvedor com expêriencias em
                 <p>HTML, CSS, JavaScript, React.Js e Node.Js</p>
             </h3>
 
