--- a/index.html
+++ b/index.html
@@ -133,11 +133,11 @@
             </h3>
 
             <h4>
-                Trabalho com suporte desde 2006, com ampla experiência em atendimento ao usuário, manutenção de sistemas, acesso remoto e soluções de hardware e software. Em 2022, concluí minha graduação em Análise e Desenvolvimento de Sistemas, e desde então venho me dedicando à área de desenvolvimento front-end.
+                Em 2022, concluí minha graduação em Análise e Desenvolvimento de Sistemas, e desde então venho me dedicando à área de desenvolvimento front-end.
 
 Tenho me aprofundado em tecnologias como HTML, CSS, JavaScript e Etc, participando ativamente de cursos, imersões, bootcamps e projetos voluntários. Meu objetivo é fazer a transição para a área de desenvolvimento, onde já venho atuando em projetos pessoais e colaborativos para ampliar meu portfólio e minha experiência prática.
 
-Sigo em constante evolução, buscando minha primeira oportunidade oficial como desenvolvedor, mas também aberto a atuar com suporte, enquanto avanço na carreira de tecnologia.
+Sigo em constante evolução, buscando minha primeira oportunidade oficial como desenvolvedor.
             </h4>
 
             <h4>
