--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 
         <div class="button-cta">
           <a
-            href="public/document/Currículo.pdf"
+            href="public/document/Edilson_Junior_Curriculo.pdf"
             target="_blank"
             rel="noopener noreferrer"
             aria-label="Abrir currículo Júnior Bueno"
